MDWiki: - More style tweaks, fix the width of the body - Add an actual header title to the markdown cheat sheet - Don't style header & blockquote hints with MD, its too much space
git-svn-id: http://asylumsw.svn.beanstalkapp.com/asw/trunk/mdwiki@10 d39503b6-4be7-4997-8962-da28a804b4ce

--- a/includes/css/default.css
+++ b/includes/css/default.css
@@ -1,6 +1,7 @@
 body {
   color                 : black;
   background-color      : white;
+  width                 : 725px;
 }
 a {
   text-decoration       : none;
@@ -24,6 +25,7 @@ a:visited {
   padding               : .5em 0 0 0;
 	margin                : .5em auto 0 auto;
 	width                 : 75%;
+	clear                 : both;
 
 	color                 : grey;
 	font-size             : x-small;
